tiempo de llegada a un evento completado